Fixed spacing for forms

--- a/stylesheets/index.css
+++ b/stylesheets/index.css
@@ -30,7 +30,7 @@ body {
     right: 0;
     background-color: rgb(200, 179, 179);
     overflow-x: hidden;
-    padding-top: 15%;
+    padding-top: 2%;
 }
 #new-user {
     margin: 2%
